# hadui

./: LICENSE  README.md  cabal.project  default.nix  shell.nix  stack.yaml
hadui/: .gitignore  ChangeLog.md  LICENSE  README.md  default.nix  hadui.cabal  package.yaml
hadui/app/: Main.hs
hadui/dev-main/: Main.hs
hadui/pub-main/: Main.hs
hadui/src/: HadUI.hs  HaduiCfg.hs  HaduiDev.hs  HaduiGHCi.hs  HaduiMonad.hs  HaduiPub.hs  HaduiRT.hs  HaduiUtil.hs  UIO.hs  _HaduiDev.hs
hadui/web/: dev.html  dev.js  front.html  hadui-custom.css  hadui-custom.js  hadui.css  hadui.js  log.js  ts.js  wsc.js
nixpkgs-overlays/: ghc865ife-overlay.nix
